--- a/ubuntu/http/preseed.cfg
+++ b/ubuntu/http/preseed.cfg
@@ -1,22 +1,27 @@
 choose-mirror-bin mirror/http/proxy string
-d-i debian-installer/framebuffer boolean false
-d-i debconf/frontend select noninteractive
-d-i base-installer/kernel/override-image string linux-server
+d-i base-installer/kernel/override-image string linux-virtual
 d-i clock-setup/utc boolean true
 d-i clock-setup/utc-auto boolean true
+d-i console-setup/ask_detect boolean false
+d-i debconf/frontend select noninteractive
+d-i debian-installer/framebuffer boolean false
+d-i debian-installer/locale string en_US
+d-i debian-installer/quiet boolean false
+d-i debian-installer/splash boolean false
 d-i finish-install/reboot_in_progress note
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
+d-i keyboard-configuration/xkb-keymap select us
 d-i partman-auto/method string regular
 d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
 d-i partman/confirm_write_new_label boolean true
-d-i pkgsel/include string openssh-server
+d-i pkgsel/include string openssh-server bash-completion
 d-i pkgsel/install-language-support boolean false
-d-i pkgsel/update-policy select none
+d-i pkgsel/update-policy select unattended-upgrades
 d-i pkgsel/upgrade select full-upgrade
-d-i time/zone string UTC
+d-i time/zone string CET
 d-i user-setup/allow-password-weak boolean true
 d-i user-setup/encrypt-home boolean false
 tasksel tasksel/first multiselect standard, ubuntu-server
