--- a/ubuntu/http/preseed.cfg
+++ b/ubuntu/http/preseed.cfg
@@ -11,7 +11,7 @@ d-i debian-installer/splash boolean false
 d-i finish-install/reboot_in_progress note
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
-d-i keyboard-configuration/xkb-keymap select us
+d-i keyboard-configuration/layoutcode string us
 d-i partman-auto/method string regular
 d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
@@ -25,3 +25,8 @@ d-i time/zone string CET
 d-i user-setup/allow-password-weak boolean true
 d-i user-setup/encrypt-home boolean false
 tasksel tasksel/first multiselect standard, ubuntu-server
+d-i preseed/late_command string \
+    DEBIAN_FRONTEND=noninteractive in-target apt-get --yes dist-upgrade && \
+    sed -i -e '/^GRUB_CMDLINE_LINUX_DEFAULT=/s/=""$/="biosdevname=0 net.ifnames=0"/' -e '/^GRUB_TIMEOUT=/s/=[0-9]\+$/=0/' /target/etc/default/grub && \
+    cat /target/etc/default/grub && \
+    in-target update-grub
